--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Problems 11 - 20\Problem19.cs" />
     <Compile Include="Problems 21 - 30\Problem24.cs" />
     <Compile Include="Problems 21 - 30\Problem25.cs" />
+    <Compile Include="Problems 21 - 30\Problem26.cs" />
+    <Compile Include="Utility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Problems 1-10\Problem5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
