--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Problems 21 - 30\Problem25.cs" />
     <Compile Include="Problems 21 - 30\Problem26.cs" />
     <Compile Include="Problems 21 - 30\Problem27.cs" />
+    <Compile Include="Problems 21 - 30\Problem28.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Problems 1-10\Problem5.cs" />
