--- a/ProjectEuler/ProjectEuler.csproj
+++ b/ProjectEuler/ProjectEuler.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Problems 21 - 30\Problem27.cs" />
     <Compile Include="Problems 21 - 30\Problem28.cs" />
     <Compile Include="Problems 21 - 30\Problem29.cs" />
+    <Compile Include="Problems 21 - 30\Problem30.cs" />
     <Compile Include="Utility.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Problems 1-10\Problem5.cs" />
